--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
+    "dropzone": "^5.7.2",
     "jquery": "^3.5.1",
     "simplebar": "^5.3.0",
     "svg4everybody": "^2.1.9"
