--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "dropzone": "^5.7.2",
+    "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
     "jquery-modal": "^0.9.2",
     "simplebar": "^5.3.0",
