--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-inject-string": "^1.1.2",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^4.0.1",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
