--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
+    "croppie": "^2.6.5",
     "dropzone": "^5.7.2",
     "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
